added more description

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2><span>Welcome</span></h2>
-								<p>My name is Litien Li and I am 60 years old and I have been playing music since I was 10! I pay vioin, guitar, and sing.</p>
+								<p>My name is Litien Li and I am 60 years old and I have been playing music since I was 10! I pay vioin, guitar, and sing. I play at family weddings and small concerts in my free time!</p>
 								<a href="#" class="site-btn">Contact</a>
 								<!-- <a href="#" class="site-btn sb-c2">Start free trial</a> -->
 							</div>
