--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="col-lg-6">
 							<div class="hs-text">
 								<h2><span>Welcome</span></h2>
-								<p>My name is Litien Li and I am 60 years old and I have been playing music since I was 10! I pay vioin, guitar, and sing. I play at family weddings and small concerts in my free time!</p>
+								<p>My name is Litien Li and I am 60 years old and I have been playing music since I was 10! I pay vioin, guitar, and sing. I play at family weddings and small concerts in my free time! Please contact me if you need someone to sing traditional Chinese songs or a violist!</p>
 								<a href="#" class="site-btn">Contact</a>
 								<!-- <a href="#" class="site-btn sb-c2">Start free trial</a> -->
 							</div>
@@ -128,8 +128,8 @@
 				<div class="col-xl-6 col-lg-5 order-lg-1">
 					<img src="img/logo.png" alt="">
 					<div class="copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></div>
+						Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
+
 					<div class="social-links">
 						<a href="https://www.instagram.com/litienli"><i class="fa fa-instagram"></i></a>
 						<a href="https://www.facebook.com/litienli"><i class="fa fa-facebook"></i></a>
